gh-pages: updated sphinx configuration

--- a/genindex.html
+++ b/genindex.html
@@ -16,7 +16,7 @@
   
   
   
-    <link rel="canonical" href="https://naim94a.github.io/udptgenindex.html"/>
+    <link rel="canonical" href="https://naim94a.github.io/udpt/genindex.html"/>
   
 
   
