--- a/building.html
+++ b/building.html
@@ -15,7 +15,7 @@
   
   
   
-    <link rel="canonical" href="https://naim94a.github.io/udptbuilding.html"/>
+    <link rel="canonical" href="https://naim94a.github.io/udpt/building.html"/>
   
 
   
