--- a/restapi.html
+++ b/restapi.html
@@ -15,7 +15,7 @@
   
   
   
-    <link rel="canonical" href="https://naim94a.github.io/udptrestapi.html"/>
+    <link rel="canonical" href="https://naim94a.github.io/udpt/restapi.html"/>
   
 
   
