--- a/search.html
+++ b/search.html
@@ -15,7 +15,7 @@
   
   
   
-    <link rel="canonical" href="https://naim94a.github.io/udptsearch.html"/>
+    <link rel="canonical" href="https://naim94a.github.io/udpt/search.html"/>
   
 
   
