--- a/udpt.conf.html
+++ b/udpt.conf.html
@@ -15,7 +15,7 @@
   
   
   
-    <link rel="canonical" href="https://naim94a.github.io/udptudpt.conf.html"/>
+    <link rel="canonical" href="https://naim94a.github.io/udpt/udpt.conf.html"/>
   
 
   
