gh-pages: added google analytics

--- a/udpt.html
+++ b/udpt.html
@@ -39,7 +39,17 @@
         <link rel="search" title="Search" href="search.html"/>
     <link rel="top" title="UDPT 2.1.0 documentation" href="index.html"/>
         <link rel="next" title="3. UDPT Configuration File" href="udpt.conf.html"/>
-        <link rel="prev" title="1. Building UDPT" href="building.html"/> 
+        <link rel="prev" title="1. Building UDPT" href="building.html"/>
+ 
+<!-- Global Site Tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-11289087-19"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-11289087-19');
+</script>
+
 
   
   <script src="_static/js/modernizr.min.js"></script>
