--- a/restapi.html
+++ b/restapi.html
@@ -38,7 +38,17 @@
               href="genindex.html"/>
         <link rel="search" title="Search" href="search.html"/>
     <link rel="top" title="UDPT 2.1.0 documentation" href="index.html"/>
-        <link rel="prev" title="3. UDPT Configuration File" href="udpt.conf.html"/> 
+        <link rel="prev" title="3. UDPT Configuration File" href="udpt.conf.html"/>
+ 
+<!-- Global Site Tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-11289087-19"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-11289087-19');
+</script>
+
 
   
   <script src="_static/js/modernizr.min.js"></script>
