--- a/search.html
+++ b/search.html
@@ -37,7 +37,17 @@
         <link rel="index" title="Index"
               href="genindex.html"/>
         <link rel="search" title="Search" href="#"/>
-    <link rel="top" title="UDPT 2.1.0 documentation" href="index.html"/> 
+    <link rel="top" title="UDPT 2.1.0 documentation" href="index.html"/>
+ 
+<!-- Global Site Tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-11289087-19"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-11289087-19');
+</script>
+
 
   
   <script src="_static/js/modernizr.min.js"></script>
