--- a/udpt.conf.html
+++ b/udpt.conf.html
@@ -39,7 +39,17 @@
         <link rel="search" title="Search" href="search.html"/>
     <link rel="top" title="UDPT 2.1.0 documentation" href="index.html"/>
         <link rel="next" title="4. HTTP Rest API" href="restapi.html"/>
-        <link rel="prev" title="2. UDPT Usage" href="udpt.html"/> 
+        <link rel="prev" title="2. UDPT Usage" href="udpt.html"/>
+ 
+<!-- Global Site Tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-11289087-19"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-11289087-19');
+</script>
+
 
   
   <script src="_static/js/modernizr.min.js"></script>
@@ -337,7 +347,7 @@ a filename. <em>:memory:</em> can be used for in-memory DB.</td>
 <tr class="row-even"><td>chdir</td>
 <td>string</td>
 <td>/opt/udpt</td>
-<td>The directory to chroot to when running as a daemon.</td>
+<td>The directory to chdir to when running as a daemon.</td>
 </tr>
 </tbody>
 </table>
@@ -368,7 +378,7 @@ a filename. <em>:memory:</em> can be used for in-memory DB.</td>
 <span class="na">port</span> <span class="o">=</span> <span class="s">8081</span>
 <span class="na">threads</span> <span class="o">=</span> <span class="s">2</span>
 
-<span class="c1"># Daemon chroot settings</span>
+<span class="c1"># Daemon chdir settings</span>
 <span class="k">[daemon]</span>
 <span class="na">chdir</span> <span class="o">=</span> <span class="s">/home/udpt/</span>
 
