--- a/udpt.conf.html
+++ b/udpt.conf.html
@@ -269,10 +269,10 @@ a filename. <em>:memory:</em> can be used for in-memory DB.</td>
 <blockquote>
 <div><table border="1" class="docutils">
 <colgroup>
-<col width="14%" />
-<col width="14%" />
-<col width="19%" />
-<col width="54%" />
+<col width="13%" />
+<col width="13%" />
+<col width="18%" />
+<col width="56%" />
 </colgroup>
 <tbody valign="top">
 <tr class="row-odd"><td><strong>Key</strong></td>
@@ -290,10 +290,11 @@ a filename. <em>:memory:</em> can be used for in-memory DB.</td>
 <td><em>8081</em></td>
 <td>The port the HTTP API should listen on.</td>
 </tr>
-<tr class="row-even"><td>threads</td>
-<td>int</td>
-<td><em>2</em></td>
-<td>Thread allocation for the HTTP API.</td>
+<tr class="row-even"><td>iface</td>
+<td>string</td>
+<td><em>127.0.0.1</em></td>
+<td>IP of interface to listen on.
+Should only be accessible by a trusted client.</td>
 </tr>
 </tbody>
 </table>
@@ -375,8 +376,8 @@ a filename. <em>:memory:</em> can be used for in-memory DB.</td>
 <span class="c1"># API Server</span>
 <span class="k">[apiserver]</span>
 <span class="na">enable</span> <span class="o">=</span> <span class="s">yes</span>
-<span class="na">port</span> <span class="o">=</span> <span class="s">8081</span>
-<span class="na">threads</span> <span class="o">=</span> <span class="s">2</span>
+<span class="na">iface</span> <span class="o">=</span> <span class="s">127.0.0.1</span>
+<span class="na">port</span> <span class="o">=</span> <span class="s">1122</span>
 
 <span class="c1"># Daemon chdir settings</span>
 <span class="k">[daemon]</span>
